--- a/app/globals.css
+++ b/app/globals.css
@@ -106,6 +106,23 @@ html {
   }
 }
 
+@media print {
+  body * {
+    visibility: hidden;
+  }
+
+  .print-container,
+  .print-container * {
+    visibility: visible;
+  }
+
+  .print-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+}
 
  
 }
